--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Rahul Portfolio",
+  "short_name": "Meenakshi Portfolio",
   "name": "Portfolio to showcase my skills",
   "icons": [
     {
